# tree-sitter-urus

./: .editorconfig  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: mirror.yml
bindings/c/: tree-sitter-urus.pc.in
bindings/c/tree_sitter/: tree-sitter-urus.h
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_urus/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterUrusTests/: TreeSitterUrusTests.swift
examples/: arrays.urus  enums.urus  fibonacci.urus  files.urus  hello.urus  result.urus  strings.urus  structs.urus
examples/modules/: main.urus  math_utils.urus
src/: grammar.json  node-types.json  parser.c
