[package]
name = "tree-sitter-urus"
description = "An attempt to write tree-sitter parser for Urus programming language"
version = "0.1.0"
authors = ["Kamal Fasya <kamalfasya01@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "urus"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/urus-foundation/tree-sitter-urus"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.10"
